Bug 106123 - Writer crashed while adding a word to the standard dictionary from writer annotations
Summary: Writer crashed while adding a word to the standard dictionary from writer ann...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.2.0.0.alpha1
Hardware: x86-64 (AMD64) Linux (All)
: highest critical
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.4.0 target:5.3.2 target:5.2.7
Keywords: bibisected, bisected, haveBacktrace, regression
Depends on:
Blocks:
 
Reported: 2017-02-21 08:47 UTC by Luke Kendall
Modified: 2017-03-03 21:19 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
gdb backtrace (5.44 KB, text/x-log)
2017-02-21 09:09 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Luke Kendall 2017-02-21 08:47:47 UTC
The word "happenstance" was underlined in a comment. I clicked on it and chose to add it to standard.dic. Writer instantly crashed, and it noticed it had crashed, and offered the recovery process. It saved files and restarted without any loss of data. The word appears to have been added correctly to the dictionary, as it's no longer underlined in red.
Comment 1 Xisco Faulí 2017-02-21 08:58:35 UTC
Confirmed in

Version: 5.4.0.0.alpha0+
Build ID: 880033edde516fc30225005245253293a6a58ba4
CPU Threads: 4; OS Version: Linux 4.8; UI Render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

but not in

Versión: 5.3.0.3
Id. de compilación: 7074905676c47b82bbcfbea1aeefc84afe1c50e1
Subpr. de CPU: 1; Versión de SO: Windows 6.1; Repr. de IU: predet.; Motor de trazado: HarfBuzz; 
Configuración regional: es-ES (es_ES); Calc: group
Comment 2 Xisco Faulí 2017-02-21 09:09:06 UTC
Created attachment 131379 [details]
gdb backtrace
Comment 3 Xisco Faulí 2017-02-21 09:11:33 UTC
I can't reproduce it in

Version: 5.0.0.0.alpha1+
Build ID: 0db96caf0fcce09b87621c11b584a6d81cc7df86
Locale: ca-ES (ca_ES.UTF-8)
Comment 4 Xisco Faulí 2017-02-21 17:07:51 UTC
Regression introduced by:

author	Armin Le Grand <Armin.Le.Grand@cib.de>	2016-04-21 14:05:38 (GMT)
committer	Armin Le Grand <Armin.Le.Grand@cib.de>	2016-04-26 10:33:41 (GMT)
commit ed42a984099b8847aedbdd638c7e20e0b68a9290 (patch)
tree b2660781d18ee5533aa6912898982716300462cb
parent f91674bd4b5022a63dc5e6a89fe9a1b832d96798 (diff)

tdf#99388 suppress close comment when PopupMenu is active
With comments in draw/impress these use vcl::windows of type
AnnotationWindow. When the PopupMenu bottom-right is used,
this gets a LoseFocus event and gets closed since this is the
standard mechanism this window closes. This is fatal when
the PopupMenu is open since it uses it as parent window.
To avoid this, a flag is added to the AnnotationWindow
to avoid triggering the close event in that state.

Adding Cc: to Armin Le Grand
Comment 5 Luke Kendall 2017-02-22 04:15:52 UTC
Excellent sleuthing, Xisco - thank you!
Comment 6 Julien Nabet 2017-02-22 23:41:06 UTC
On pc Debian x86-64 with master sources updated today, I don't reproduce this (gtk3 + enable-dbgutil).
However, i just have "Add to dictionary", I see nothing about standard.dic

Xisco: I'm surprised by the commit you quoted for regression. Indeed, with its date I think you should have reproduced the problem with 5.3.0.3 and it's not the case.
Comment 7 Xisco Faulí 2017-02-23 11:01:51 UTC
Indeed, I can reproduce it in

Version: 5.3.0.3
Build ID: 1:5.3.0~rc3-0ubuntu1~yakkety1.1
CPU Threads: 4; OS Version: Linux 4.8; UI Render: default; VCL: gtk3; Layout Engine: new; 
Locale: es-ES (ca_ES.UTF-8); Calc: group

but not in 

Versión: 5.3.0.3
Id. de compilación: 7074905676c47b82bbcfbea1aeefc84afe1c50e1
Subpr. de CPU: 1; Versión de SO: Windows 6.1; Repr. de IU: predet.; Motor de trazado: HarfBuzz; 
Configuración regional: es-ES (es_ES); Calc: group

which is windows
Comment 8 Caolán McNamara 2017-02-24 13:54:26 UTC
I think Armin is innocent here, its just a similar bug that is a use after delete so it sometimes doens't crash making the bisect a little fuzzy
Comment 9 Commit Notification 2017-02-24 13:59:45 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=71a84b69ae30458a941f38869aa994118051a063

Resolves: tdf#106123 store and restore the PaM around the menu Execute

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Caolán McNamara 2017-02-24 14:03:58 UTC
fixed in master, backports to 5-2 and 5-3 in gerrit
Comment 11 Commit Notification 2017-02-28 11:06:07 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=48ad98b36403a04d05f6ed08e541ffbd65995af9&h=libreoffice-5-3

Resolves: tdf#106123 store and restore the PaM around the menu Execute

It will be available in 5.3.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2017-03-03 21:19:57 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=612903384bbe68dfb3be1b36111e28b869aa0be8&h=libreoffice-5-2

Resolves: tdf#106123 store and restore the PaM around the menu Execute

It will be available in 5.2.7.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.