Resolves: tdf#106123 store and restore the PaM around the menu Execute

because the loss of focus in the current editeng causes writer annotations to
save their contents, making the pContent of the current EditMaps invalid

(cherry picked from commit 71a84b69ae30458a941f38869aa994118051a063)

Change-Id: Ic01379291fa66dd58246d33287b18801f5da49c0
Reviewed-on: https://gerrit.libreoffice.org/34614
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Michael Stahl <mstahl@redhat.com>
(cherry picked from commit 612903384bbe68dfb3be1b36111e28b869aa0be8)